<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="100"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/ratio"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:alpha="100"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/flash"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="93dp"
        android:layout_height="33dp"
        android:alpha="100"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/quality"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="100"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/format"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.100000024" />


    <ImageButton
        android:id="@+id/button43"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/capture"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/r4_3_on_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <ImageButton
        android:id="@+id/button169"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/capture"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/r16_9_on_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <ImageButton
        android:id="@+id/buttonfon"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/capture"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/flash_on_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button169"
        app:layout_constraintVertical_bias="0.033" />

    <ImageButton
        android:id="@+id/buttonfoff"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:alpha="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/capture"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/flash_off_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button43"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonfon"
        app:layout_constraintVertical_bias="0.029999971" />

    <Button
        android:id="@+id/max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonfoff"
        app:layout_constraintVertical_bias="0.029999971" />

</androidx.constraintlayout.widget.ConstraintLayout>