<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clayout"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:focusable="true">

    <ImageButton
        android:id="@+id/camera_flip"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/flip"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/flip_button_press"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/camera_capture_button"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/buttonstop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonstop"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/camera_flip"
        app:layout_constraintEnd_toStartOf="@+id/buttonvid"
        app:layout_constraintStart_toStartOf="@+id/viewFinder"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/camera_capture_button"
        android:layout_width="124dp"
        android:layout_height="128dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/capture"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/capture_button_press"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/settings_arrow"
        android:layout_width="67dp"
        android:layout_height="51dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/capture"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_expand_more_24"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/camera_capture_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonvid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonvideomode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startvideocam"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintStart_toEndOf="@+id/buttonvid"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/gallery"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/gallery"
        android:elevation="2dp"
        android:foreground="@drawable/ic_gallery_round"
        android:padding="4dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/viewFinder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toEndOf="@+id/camera_capture_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="177dp">

    </androidx.camera.view.PreviewView>

    <FrameLayout
        android:id="@+id/s_view"
        android:layout_width="353dp"
        android:layout_height="354dp"
        android:visibility="gone"
        android:background="@drawable/round_corner"
        app:layout_constraintBottom_toTopOf="@+id/camera_capture_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_arrow"
        app:layout_constraintVertical_bias="0.29000002">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/buttonback"
                android:layout_width="59dp"
                android:layout_height="56dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.98" />

            <ScrollView

                android:id="@+id/sc_view"
                android:layout_width="333dp"
                android:layout_height="272dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.100000024">

            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--   <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.639"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.127" />

                <Button
                    android:id="@+id/button169"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_16_9"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.898"
                    app:layout_constraintStart_toEndOf="@+id/button43"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.127" />

                <ImageButton
                    android:id="@+id/buttonback"
                    android:layout_width="50dp"
                    android:layout_height="53dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.98" />

            </androidx.constraintlayout.widget.ConstraintLayout>  -->
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

